# probranchinator

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile.toml  README.md  install.sh  tarpaulin.toml
.github/workflows/: build.yaml
choco/: probranchinator.nuspec
choco/tools/: LICENSE.txt  VERIFICATION.txt
src/: analysis.rs  app.rs  cli.rs  clone.rs  interactive.rs  main.rs  probranchinator.rs  recent.rs  repo.rs  result.rs
src/tests/: analysis_test.rs  recent_test.rs  repo_test.rs
src/tests/support/: git.rs  mod.rs
tests/: cli_tests.rs
vhs/: .gitignore  Dockerfile  README.md  base.tape  base.txt  compare.sh
