[package]
name = "probranchinator"
description = "A tool to help you analyse conflicts in git branches"
version = "0.1.0-r1"
license = "MIT"
repository = "https://github.com/strowk/probranchinator/"
edition = "2021"

[dependencies]
git2 = { version = "0.16.1", default-features = false }
tui = "0.19"
crossterm = "0.25"
tempfile = "3.5.0"
anyhow = "1.0.70"
clap = { version = "4.2.0", features = ["derive"] }
fehler = "1.0.0"
