[package]
name = "probranchinator"
description = "A tool to help you analyse conflicts in git branches"
version = "0.2.0-rc1"
license = "MIT"
repository = "https://github.com/strowk/probranchinator/"
edition = "2021"
authors = ["Timur Sultanaev <str.write@gmail.com>"]

[dependencies]
git2 = { version = "0.16.1", default-features = false }
tui = "0.19"
crossterm = "0.25"
tempfile = "3.5.0"
anyhow = "1.0.70"
clap = { version = "4.2.0", features = ["derive"] }
fehler = "1.0.0"
ctrlc = "3.2.5"
eyre = "0.6.8"
