[package]
name = "probranchinator"
description = "A tool to help you analyse conflicts in git branches"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/strowk/probranchinator/"
edition = "2021"
authors = ["Timur Sultanaev <str.write@gmail.com>"]

[dependencies]
git2 = { version = "0.16.1", default-features = false }
tui = "0.19"
crossterm = "0.25"
tempfile = "3.5.0"
clap = { version = "4.2.0", features = ["derive"] }
fehler = "1.0.0"
ctrlc = "3.2.5"
eyre = "0.6.8"
indicatif = "0.17.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tabled = "0.12.0"


[package.metadata.release]
# Disable publishing to crates.io, it is done by GitHub Actions
publish = false

# Replace Unreleased with version number in CHANGELOG.md
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "v{{version}}"

# Replace ReleaseDate with current date in CHANGELOG.md
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

# Add next Unreleased header in CHANGELOG.md
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-header -->"
replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

# Replace footer comparison link in CHANGELOG.md
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...v{{version}}"
exactly = 1

# Add next Unreleased comparison link in CHANGELOG.md
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-url -->"
replace = "<!-- next-url -->\n[Unreleased]: https://github.com/strowk/probranchinator/compare/v{{version}}...HEAD"
exactly = 1
